--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;1,200&display=swap');
+
 body{
-    background-color: gray;
     padding: 0;
     margin: 0;
-   
+    font-family: 'Poppins', sans-serif;
+    background-color:  #212121;
+
 }
+
+
+
 
 .tela_inicial{
     height: 100vh;
@@ -11,12 +18,31 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left:  -5%;
 }
+
 .div_principal{
     width: 50%;
-    height: 80%;
-    
+    height: 97%;
+    margin-left: 50%;
+    display: flex;
+    align-items: center;
+    background:#323232; 
+    border-radius: 12%;
+    border: 2px #16689e outset;
+    box-shadow: #16689e 0px 2px 4px, #16689e8e 0px 7px 13px -3px, #16689ec9 0px -3px 0px inset;
+    animation: go-back 4s  alternate ;
 }
+
+@keyframes go-back {
+    from {
+      transform: translateX(-90%);
+    }
+    to {
+      transform: translateX(0%);
+      transition: 2s;
+    }
+  }
 
 input {
     margin: 0;
@@ -24,23 +50,22 @@ input {
     height: 26px;
     padding: 0;
     text-transform: uppercase;
-   
     text-align: center;
-    border: solid #02124e;
-    background-color: #b0efeb;
+    border: solid #393e463d;
+    background-color: #16689e;
     border-radius:  10%;
-    box-shadow: #02124e79 2px 2px;
+    box-shadow: #f2f7fc9f 0.8px 0.8px;
     font-size: 22px;
 }
 
 input::placeholder {
-    font-size: 13px;
-    color: white;
+    font-size: 16px;
+    color: #252525;
 }
 
 input:disabled {
-    color: white;
-    background-color: #f2116f50;
+    color: #252525;
+    background-color: #ffffff;
 }
 
 td {
@@ -49,11 +74,12 @@ td {
 }
 
 .espaco{
-    background-color: #ecbd39 !important;
+    background-color: #e986e1 !important;
     
 }
 
-/* .Desativado {
+ .Desativado {
     background-color: #00000000 !important;
    border: solid #00000000  !important;
-}  */
+   box-shadow: #00000000 0px 0px;
+}  
